Реализация бота с NoSQL MongoDB

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,6 @@ PROJECT_HOST="localhost:8081"
 PROJECT_PORT=":8081"
 PROJECT_BASE_PATH="/"
 
-DB_CONNECTION=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=
-DB_NAME=gin_tonic
-DB_SSL_MODE=disable
-
 TELEGRAM_TOKEN="XXXXXXXXXXXXXXXXX:YYYYYYYYYYYYYYYYYYYYYYYYYYYYYY"
+
+MONGODB_CONNECTION="mongodb://localhost:27017/"
