Добавил в бот прогноз погоды

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ PROJECT_HOST="localhost:8081"
 PROJECT_PORT=":8081"
 PROJECT_BASE_PATH="/"
 
-TELEGRAM_TOKEN="XXXXXXXXXXXXXXXXX:YYYYYYYYYYYYYYYYYYYYYYYYYYYYYY"
-
+TELEGRAM_TOKEN="X:Y"
 MONGODB_CONNECTION="mongodb://localhost:27017/"
+YANDEX_WEATHER_TOKEN=
+OPEN_WEATHER_MAP_TOKEN=
